@@ -207,7 +207,14 @@ class Photo
 
   function GetMedia($type='thumbnail')
   {
-    return 'media.php&#63;format='.$type.'&amp;id='.$this->record['id'].'&amp;ver='.$this->record['mtime'];
+    global $cameralife;
+
+    if ($cameralife->preferences['core']['rewrite'] == 'yes')
+      return "photos/$type/".$this->record['id'].'-'.$this->record['mtime'].'.'.$this->extension;
+    else
+      return 'media.php&#63;format='.$type.'&amp;id='.$this->record['id'].'&amp;ver='.$this->record['mtime'];
+
+    #this uses mod_rewrite
   }
 
   function GetFolder()
