@@ -1,5 +1,8 @@
 SVN  Will Entriken <cameralife AT phor.net>
 * Automatically updates when the photos directory is changed 
+* Renames and flags can be undone immediately (a la gmail)
+* PNG support
+* Uses mod_rewrite if possible
 
 2.6.0  Will Entriken <cameralife AT phor.net>
 * Support for Gallery Remote API (upload from iPhoto, DigiKam, ...)
